--- a/welcome/customer/css/style.css
+++ b/welcome/customer/css/style.css
@@ -33,7 +33,7 @@ body.landing  {
 
 
 #banner {
-	background: url("../images/overlay.png"), url("../images/background.jpg");
+	background: url("../images/overlay.png"), url("../images/product.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
